# libuncso2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
.ci/: .travis.yml
ci/: build.ps1  setup.ps1  test.ps1
cmake_modules/: libuc2_version.cmake
headers/: decryptor.hpp  encryptedfileimpl.hpp  keyhashes.hpp  lib_version.hpp.in  lzmaDecoder.h  lzmatextureimpl.hpp  util.hpp
headers/ciphers/: aescipher.hpp  basecipher.hpp  blowfishcipher.hpp  descipher.hpp
headers/pkg/: pkgentryimpl.hpp  pkgfileimpl.hpp  pkgfileoptionsimpl.hpp  pkgindeximpl.hpp  pkgstructures.hpp
public_headers/uc2/: encryptedfile.h  encryptedfile.hpp  lzmatexture.h  lzmatexture.hpp  pkgentry.h  pkgentry.hpp  pkgfile.h  pkgfile.hpp  pkgfileoptions.h  pkgfileoptions.hpp  pkgindex.h  pkgindex.hpp  uc2.h  uc2.hpp  uc2defs.h  uc2version.h  uc2version.hpp
sources/: decryptor.cpp  encryptedfile.cpp  keyhashes.cpp  lzmaDecoder.cpp  lzmatexture.cpp  uc2version.cpp
sources/bindings/: encryptedfile.cpp  lzmatexture.cpp  pkgentry.cpp  pkgfile.cpp  pkgfileoptions.cpp  pkgindex.cpp  uc2version.cpp
sources/ciphers/: aescipher.cpp  blowfishcipher.cpp  descipher.cpp
sources/pkg/: pkgentry.cpp  pkgfile.cpp  pkgfileoptions.cpp  pkgindex.cpp
tests/: CMakeLists.txt  utils.cpp  utils.hpp
tests/cso2/nexon/: settings.hpp  test_encfile.cpp  test_lzmatex.cpp  test_pkgfile.cpp  test_pkgindex.cpp
tests/gamefiles/: attachments_beancity.ecsv  attachments_dev_nexon.ecsv  attachments_dev_nexonjp.ecsv  attachments_dev_tiancity.ecsv  index_beancity.pkg  index_nexon.pkg  index_nexonjp.pkg  index_tfo.pkg  index_tiancity.pkg  v_m4a1_gold.vtf
tests/tfo/nexon/: settings.hpp  test_pkgfile.cpp  test_pkgindex.cpp
